--- a/Rock.Migrations/Rock.Migrations.csproj
+++ b/Rock.Migrations/Rock.Migrations.csproj
@@ -149,6 +149,10 @@
     <Compile Include="Migrations\202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.Designer.cs">
       <DependentUpon>202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\202505222142503_AddAutomationTriggersAndEvents.cs" />
+    <Compile Include="Migrations\202505222142503_AddAutomationTriggersAndEvents.Designer.cs">
+      <DependentUpon>202505222142503_AddAutomationTriggersAndEvents.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.cs" />
     <Compile Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.Designer.cs">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
@@ -2713,6 +2717,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.resx">
       <DependentUpon>202505162026334_AddIsBeaconMonitoringEnabledToPersonalDevice.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\202505222142503_AddAutomationTriggersAndEvents.resx">
+      <DependentUpon>202505222142503_AddAutomationTriggersAndEvents.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\Version 17.0\Version 17.0\202503251838152_AddHistoryLoginModel.resx">
       <DependentUpon>202503251838152_AddHistoryLoginModel.cs</DependentUpon>
