--- a/Rock/Rock.csproj
+++ b/Rock/Rock.csproj
@@ -705,10 +705,10 @@
     <Compile Include="AI\Agent\AgentProviderContainer.cs" />
     <Compile Include="AI\Agent\AgentRequestContext.cs" />
     <Compile Include="AI\Agent\ContextAnchor.cs" />
-    <Compile Include="AI\Agent\IAiAgentProvider.cs" />
+    <Compile Include="AI\Agent\IAgentProvider.cs" />
     <Compile Include="AI\Agent\IChatAgent.cs" />
     <Compile Include="AI\Agent\IChatAgentBuilder.cs" />
-    <Compile Include="AI\Agent\IRockAiSkill.cs" />
+    <Compile Include="AI\Agent\IAgentSkill.cs" />
     <Compile Include="AI\Agent\SkillConfiguration.cs" />
     <Compile Include="AI\Agent\UsageMetric.cs" />
     <Compile Include="AI\Automations\AIAutomation.cs" />
@@ -2000,8 +2000,8 @@
     <Compile Include="Security\SecurityGrantRules\ConnectionRequestPickerSecurityGrantRule.cs" />
     <Compile Include="Security\SecurityGrantRules\EmailEditorSecurityGrantRule.cs" />
     <Compile Include="Storage\AssetManagerAsset.cs" />
-    <Compile Include="SystemGuid\AiFunctionGuidAttribute.cs" />
-    <Compile Include="SystemGuid\AiSkillGuidAttribute.cs" />
+    <Compile Include="SystemGuid\AgentFunctionGuidAttribute.cs" />
+    <Compile Include="SystemGuid\AgentSkillGuidAttribute.cs" />
     <Compile Include="SystemGuid\EmailSection.cs" />
     <Compile Include="SystemGuid\SnippetType.cs" />
     <Compile Include="SystemKey\GlobalAttributeKey.cs" />
